# claude-cli

./: .coverage  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: operations.md  workflow-troubleshooting.md
docs/adr/: adr-001-path-resolution.md  adr-002-pre-commit-smoke-test.md  adr-003-gitleaks-integration.md  adr-004-llm-provider-protocol.md  adr-005-documentation-reference-pattern.md  adr-006-hook-metrics-jsonl.md
docs/reports/tmp/: flush-context-test-session-20260528-025355.md
src/claude_cli/: __init__.py  _bootstrap_identity.py  _bus.py  _config.py  _hook_metrics.py  _identity.py  _llm.py  _utils.py  _workflow_schema.json  bootstrap.py  check_model_vision.py  commit.py  dispatch.py  post_tool_use.py  pre_commit.py  pre_compact.py  session_end.py  session_start.py  standards_guard.py  statusline.py
src/claude_knowledge/: __init__.py  _config.py  _utils.py  cli.py  compile.py  engine.py  index.py  ingest.py  query.py  scan.py  shortlist.py  templates.py  validate.py
src/claude_quality/: __init__.py  anti_gaming.py  gate.py  modes.py  precedents.py  schemas.py
templates/: documenter.md  implementer.md  meeting-delegate.md  planner.md  researcher.md  reviewer.md  tester.md  trainer.md
tests/test_cli/: test_bootstrap.py  test_check_model_vision.py  test_cli_utils.py  test_config.py  test_dispatch.py  test_dispatch_validation.py  test_hook_metrics.py  test_hooks_integration.py  test_identity.py  test_llm.py  test_pre_commit.py  test_pre_compact.py  test_session_end.py  test_session_start.py  test_standards_guard.py  test_statusline.py
tests/test_knowledge/: test_cli.py  test_compile.py  test_engine.py  test_index.py  test_ingest.py  test_knowledge_config.py  test_query.py  test_query_extended.py  test_scan.py  test_shortlist.py  test_templates.py  test_utils.py  test_utils_extended.py  test_validate.py
tests/test_quality/: test_anti_gaming.py  test_gate.py  test_modes.py  test_precedents.py  test_schemas.py
